Added transition_if_valid! and LoanOfficer context example; preliminary FinalState support.

--- a/README
+++ b/README
@@ -1,4 +1,18 @@
-RedSteak - a clonable, mutable statemachine for Ruby.
+RedSteak - a clonable, mutable UML 2 StateMachine for Ruby.
 
-Aims for UML 2.x metamodel compilance.
+Features:
+
+* Implements UML 2.1 StateMachines (partially).
+* StateMachines can be instantiated then cloned via StateMachine#copy.
+* Submachines are supported, a state may have an imbedded StateMachine.
+* Builder DSL simplifies construction of complex statemachines.
+* StateMachines can be serialized.
+* StateMachines can be modified on-the-fly.
+* Context objects can be notfied of transitions.
+* Context objects can be used to create transition guards.
+* StateMachines, States and Transitions are objects that can be extended with metadata.
+* History of transitions can be kept.
+* Multiple machines can walk the same statemachine without side-effects.
+* StateMachines and their transition history can be rendered as Dot syntax.
+
 
