--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 ** Support StateMachine#freeze to avoid accidental changes to a running StateMachine.
 ** Support UML Pseudostates.
 ** Support UML Regions.
+** Support UML History, Deep History Pseudostate semantics.
 
 * Jeremy's Comments:
 ** Having to call start! explicitly is troublesome.
