Added Machine#state_is_active? for superstate queries. Machine#record_history! no longer takes self as an argument. NamedElement#_behavior! can return a default_value if nothing can respond to an event. Added State#is_a_superstate_of?, State#is_a_substate_of?, State#isComposite, State#isOrthogonal, State#isSimple, State#isSubmachineState. Much improved rdoc.

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
 ** Support UML Pseudostates.
 ** Support UML Regions.
 ** Support UML History, Deep History Pseudostate semantics.
+** Support UML Transition#kind.
+** Remove State#state_type and support UML FinalState.
 
 * Jeremy's Comments:
 ** Having to call start! explicitly is troublesome.
